2006-09-12  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Shrank size of glyphs.

	* src/widgets/ftkeventviewer.c: Made trace lines "thinner" 
	Apparently thinner than 1.0 means that the line becomes grayer. 
	Still looks nicer than black.

2006-09-08  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Ran artistic style for gnu formatting.
	Added mouse edge scrolling
	* src/widgets/ftkeventviewer.h: Ditto.

2006-09-07  Nurdin Premj  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c(ftk_da_redraw_canvas): Added.
	Use ftk_da_redraw_canvas to re-expose the drawing area rather than calling expose manually.
	Shrank the amount of dead area at the end of eventviewer to 1% of the screen size (rather than 10%).

2006-09-06  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Fixed issues with horizontal and vertical scrollbars.
	Changed default span to 10 to reflect default value in java file.
	Added code to deal with drawing area size reallocations. So that more traces can be drawn.
	Cleaned up accessibility names for standard widgets.
	Removed redundant checks of GTK_WIDGET_DRAWABLE. ftk_eventviewer_da_expose 
	already checks for this now.
	Changed to only draw the number of traces that can be seen on  the screen.

2006-08-31  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c (ftk_eventviewer_da_expose):added check for 
	GTK_WIDGET_DRAWABLE

2006-08-30  Nurdin Premji  <npremji@redhat.com>

	* src/widgets/ftkeventviewer.c: Added event accessibility. Renamed ftk_event_s to FtkEvent
	* src/widgets/ftkeventviewer.h: Ditto.
	* src/widgets/ftk_marshaller.list: Added
	* Makefile.am: Added dependency to create ftk_marshaller.h and .c files.
	* src/jni/com_redhat_ftk_EventViewer.c: changed from storing 
	GTK_POINTER_TO_INT in a jint to a jlong then casted down to jint.

2006-08-23  Nurdin Premji  <npremji@redhat.com>

	* src/widgets/ftkeventviewer.c: Ditto.