@@ -1,3 +1,7 @@
+200609-13  Nurdin Premji  <npremji@redhat.com>
+	* StatusWidget.java: Changed clones to be colored blue.
+	Added a call to change the size of a marker to 6 (default is 30 so you'll know its huge).
+
 2006-09-13  Phil Muldoon  <pmuldoon@localhost.localdomain>
 
 	* ObserversMenu.java (setCurrentTask): Convert hash lookup key
